로그아웃 버튼 및 필터 설정 추가
로그아웃 버튼과 로그아웃 시 redirect 위치 필터 설정을 축합니다

--- a/server/basic-test/src/main/resources/templates/index.html
+++ b/server/basic-test/src/main/resources/templates/index.html
@@ -30,7 +30,11 @@
         <div class="link">
             <a href="/admin-page">  관리자 로그인 </a>
         </div>
-
+        <div class="link">
+            <form th:action="@{/logout}" method="post">
+                <button class="btn btn-info" type="submit">로그 아웃</button>
+            </form>
+        </div>
     </div>
 </div>
 <script th:src="@{/js/bootstrap.js}" />
